:bug_fix: #25 also added word-wrap to chatbot response

--- a/src/styles/Chatbot.css
+++ b/src/styles/Chatbot.css
@@ -19,7 +19,8 @@
 }
 
 .react-chatbot-kit-chat-bot-message {
-  left: 10px !important
+  left: 10px !important;
+  word-wrap: break-word;
 }
 
 .react-chatbot-kit-user-chat-message {
